
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.xcbeyond.springboot.grpc.lib";
option java_outer_classname = "UserProto";

import "google/protobuf/any.proto";
// The user service definition.
service UserService {
    // query one user by name
    rpc queryUserByName (UserName) returns (Reply) {
    }
    //batch insert users
    rpc batchInsertUsers (BatchUser) returns (Reply) {
    }
    // query one user by name
    rpc queryUsersByAge (UserAge) returns (stream Reply) {
    }

    rpc queryUsersByNames (stream UserName) returns (stream Reply) {
    }
}

// The request message containing the user's name.
message UserName {
    string name = 1;
}

// The request message containing the user's name.
message UserAge {
    int32 age = 1;
}

// The request message containing the user's information.
message BatchUser {
    repeated User users = 1;
    message User {
        int32 age = 1;
        string name = 2;
        int64 id_number = 3;
    }
}

// The response message containing the code,des,result
message Reply {
    int64 code = 1;
    string des = 2;
    google.protobuf.Any result = 3;
}
